--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -2,7 +2,7 @@
 on:
   push:
      branches:
-       - master
+       - main
 
   
 
@@ -34,7 +34,7 @@ jobs:
    needs: bookdown
    steps:
      - name: Checkout
-       uses: actions/checkout@master
+       uses: actions/checkout@main
      - name: Download artifact
        uses: actions/download-artifact@v4
        with:
@@ -43,7 +43,7 @@ jobs:
          # Destination path
          path: _book # optional
      - name: Deploy to GitHub Pages
-       uses: Cecilapp/GitHub-Pages-deploy@master
+       uses: Cecilapp/GitHub-Pages-deploy@main
        env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }} # https://github.com/settings/tokens
        with:
