--- a/_output.yml
+++ b/_output.yml
@@ -2,12 +2,19 @@ bookdown::gitbook:
   css: style.css
   config:
     toc:
+      scroll_highlight: true
       before: |
         <li><a href="./">Data Analysis and Numerical Methods</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/VT-BSE3144/bookdown/edit/BRANCH/%s
+    edit: 'https://github.com/VT-BSE3144/bookdown/issues'
     download: ["pdf", "epub"]
+    sharing: 
+      facebook: false
+      twitter: false
+      
+    
+    
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
@@ -15,3 +22,4 @@ bookdown::pdf_book:
   citation_package: natbib
   keep_tex: yes
 bookdown::epub_book: default
+
