--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-pandoc@v2
       - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown","bookdown", "nycflights13", "tidyverse", "readxl", "cowplot", "agricolae", "car", "propagate", "plotly", "pracma", "rootSolve", "PolynomF"))'
+        run: Rscript -e 'install.packages(c("rmarkdown","bookdown", "nycflights13", "dataRetrieval", "tidyverse", "readxl", "cowplot", "agricolae", "car", "propagate", "plotly", "pracma", "rootSolve", "PolynomF"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
       - uses: actions/upload-artifact@v4
